--- a/package.json
+++ b/package.json
@@ -14,30 +14,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.1",
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
-    "chai": "^4.2.0",
     "express": "^4.16.4",
     "isomorphic-unfetch": "^3.0.0",
-    "mocha": "^5.2.0",
     "next": "^7.0.2",
-    "node-sass": "^4.12.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-markdown": "^4.0.3",
-    "typescript": "^3.1.4"
+    "react": "^16.4.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.9",
+    "@types/mocha": "^5.2.7",
     "@types/next": "^7.0.3",
+    "@types/node": "^10.14.8",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.18.7",
-    "ts-node": "^7.0.1"
+    "ts-node": "^7.0.1",
+    "typescript": "^3.5.1"
   },
   "engines": {
     "node": "8.x"
