--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build && tsc --project tsconfig.server.json",
     "postinstall": "npm run build",
     "start": "NODE_ENV=production node .next/production-server/server.js",
-    "test": "mocha -r ts-node/register"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
@@ -22,18 +22,19 @@
     "react": "^16.4.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
     "@types/chai": "^4.1.7",
     "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.9",
     "@types/mocha": "^5.2.7",
     "@types/next": "^7.0.3",
     "@types/node": "^10.14.8",
     "@types/react": "^16.4.18",
-    "@types/react-dom": "^16.0.9",
+    "@types/react-dom": "^16.8.4",
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.7",
+    "react-dom": "^16.8.6",
     "ts-node": "^7.0.1",
     "typescript": "^3.5.1"
   },
